# sniper

./: .gitignore  LICENSE  README.md  Setup.hs  package.yaml  sniper.cabal  stack.yaml
app/: Main.hs
