cabal-version: 1.12

name:           sniper
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/lumapat/sniper#readme>
homepage:       https://github.com/lumapat/sniper#readme
bug-reports:    https://github.com/lumapat/sniper/issues
author:         Miguel Lumapat
maintainer:     wzzch@naver.com
copyright:      2020 Miguel Lumapat
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/lumapat/sniper

library
  exposed-modules:
      Lib
  other-modules:
      Paths_sniper
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

executable sniper-exe
  main-is: Main.hs
  other-modules:
      Paths_sniper
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , sniper
  default-language: Haskell2010

test-suite sniper-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_sniper
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , sniper
  default-language: Haskell2010
